# cookiie_brain

./: .gitignore  CHANGELOG.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  README_GITHUB.md  README_KO.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v4.3.0.md  VERSION_1.0_STATUS.md  pyproject.toml  requirements.txt  run_cookie_demo.sh  run_demo.sh  run_robot.py
babyhippo/: __init__.py  config.py
babyhippo/body/: __init__.py  actions.py  nervous_system.py  senses.py
babyhippo/brain/: _1_thalamus.py  _2_amygdala.py  _3_hypothalamus.py  _4_basal_ganglia.py  _5_prefrontal.py  _6_cingulate.py  _7_cerebellum.py  _8_brain_graph.py  __init__.py
babyhippo/cortex/: __init__.py  cortex_node.py
babyhippo/integration/: __init__.py  baby_brain.py  brain_capability.py  brain_llm.py  curious_brain.py  dream_manager.py  growth_achievement.py  hippo_evolution.py  lite_brain.py  pattern_finetune.py
babyhippo/memory/: __init__.py  code_brain.py  core_memory.py  hippo_memory.py  memory_pro.py  memory_rank.py  panorama_memory.py  working_memory.py
babyhippo/neural/: __init__.py  dynamics.py  hh_lif_neuron.py  hh_soma_quick.py  hippo_lm.py  izhikevich_neuron.py  myelinated_axon.py  neuron_core.py  self_organization.py  sleep_wake.py  synapse_core.py
babyhippo/utils/: __init__.py  stimulus_accumulator.py  storage.py  utils.py
blockchain/: README.md
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_ROADMAP.md  CHATBOT_FLOW.md  CONTRIBUTING.md  CONVERSATION_ROADMAP.md  COOKIE_LEARNING_GUIDE.md  DNA_FUNDAMENTAL_LAWS.md  DNA_SYSTEM.md  EVOLUTION_SYSTEM.md  EVOLUTION_TREE.md  GROWTH_SYSTEM.md  LOW_POWER_MODE.md  PERFORMANCE_OPTIMIZATION.md
examples/: 01_basic_usage.py  02_personality_types.py  03_lite_brain.py  04_cookie_v1_demo.py  05_cookie_interactive.py  06_cookie_learning_simulation.py  07_simple_learning_demo.py
scripts/: sign_all.sh
tests/: test_alpha_genome.py  test_brain.py
